# recommender_workshop

./: 1_🤖_Recommender.py  README.md  pyproject.toml
pages/: 2_❔_Random_Page.py
