[tool.poetry]
name = "recommender-workshop"
version = "0.1.0"
description = "Materials for the recommender workshop for high school students."
authors = ["Emanuel Sommer <emanuel.sommer@lmu.de>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.33.0"
plotly = "^5.20.0"
pandas = "^2.0.0"
matplotlib = "^3.8.4"
tensorflow = "^2.16.1"
keras = "^3.1.1"
scikit-learn = "^1.4.1.post1"
streamlit-extras = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
